# path-to-perdition-bevy

./: Cargo.toml  README.md
crates/android/: Cargo.toml
crates/android/src/: lib.rs
crates/game/: Cargo.toml
crates/game/src/: lib.rs  main.rs
crates/game/src/components/: mod.rs  movement.rs
crates/game/src/plugins/: mipmap.rs  mod.rs
crates/game/src/resources/: gltf_models.rs  mod.rs
crates/game/src/systems/: mod.rs  movement.rs
